12_security/12.2/JWT-enable.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: "jwt-example"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
  - issuer: "weather@cloud-native.istio"
    jwks: "{ \"keys\":[ {\"e\":\"AQAB\",\"kid\":\"3eRrNVtCwycr9WoM7r7BWunFspsezOv_if42ui0lNMg\",\"kty\":\"RSA\",\"n\":\"37yLU6gIQ24dFAUZUBxFwZe21mMgcVUI7_JlXNhcz7a-ZqcLS2DeqOka3O7QJcf7Wgy8b1tIL-uxbIKtCjnZN7erGHW-BUcWpXCZb62t9Zx7kad9dEftVc1mX7XFWg-J4BIy7Y-HO7RdzJDgHBLg4t5G586f5GAcR5-faaJr5IRmYoyg8uvnJQ1NQwCA9lMY2SiU0tb-4m7QKGwammmEToL7BLbXUCjECJJWDc_xgDl1frZ-VbXN0au8nv_TjZOy4wsFB_AwXdkVJnYGyqr6q9sR63FQgQrP2C1kwkrnIt-YdJFQ0L0mxbgNY6eQjNDkyXEneQXEW3IhyTxjZRjXHQ\"}]}"
